// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnResizing snapshots should render ColumnResizing 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="width"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="width"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="width"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                W
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="width"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="fixed-width"
                    height="12"
                    name="FixedWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed width
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto width
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="css-qef3st"
                  data-test-box=""
                />
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="3"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="min-width"
                    height="12"
                    name="MinWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add min width...
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="4"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="max-width"
                    height="12"
                    name="MaxWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add max width...
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="height"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="height"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="height"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                H
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="height"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="fixed-height"
                    height="12"
                    name="FixedHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed height
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto height
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="css-qef3st"
                  data-test-box=""
                />
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="3"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="min-height"
                    height="12"
                    name="MinHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add min height...
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="4"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="max-height"
                    height="12"
                    name="MaxHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add max height...
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--light"
            data-test-button-icon="aspect-ratio"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="aspect-ratio"
              height="14"
              name="AspectRatio"
              width="14"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Look aspect ratio
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="width"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="width"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="width"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                W
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="width"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="fixed-width"
                    height="12"
                    name="FixedWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed width
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto width
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="height"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="height"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="height"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                H
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="height"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="fixed-height"
                    height="12"
                    name="FixedHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed height
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto height
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
